2021-08-17  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): add arguments
        'median.show' and 'median.col', which have an effect
        for fan and quantile plots

2021-07-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): new series.type "quantile"
        (plotseries): rename argument 'fan.probs' to 'probs', as
        it is also used for series.type "quantile"

2021-05-04  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): support argument
        'y.grid.at'

2020-02-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        for styling streaks charts

2020-01-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add 'series.type' "streaks"

2019-12-19  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): make function
        generic, with methods 'default' and 'zoo'
        * R/plotseries.R (plotseries): many arguments
        have been renamed; see the documentation.
        There is now also a vignette with examples.

2019-12-05  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (.spread_labels): experimental
        new internal function for shifting labels when
        they overlap

2019-11-05  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument 'grid.col'

2019-10-30  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add fan plot code

2019-10-14  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument 'labels.pos'

2019-10-08  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        'labels.col' and 'cex.axis'

2019-10-07  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): decrease
        'labels.cex' to 0.7; add argument 'series.type'
