@@ -1,3 +1,8 @@
+2021-11-23  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (plotseries.default): support
+        "lwd" with length > 1
+
 2021-08-17  Enrico Schumann  <es@enricoschumann.net>
 
         * R/plotseries.R (plotseries.default): add arguments
